add update_ronnds handler
